Added proper unit tests; fixed up some bugs

--- a/Littera/Littera.API.UnitTests/Littera.API.UnitTests.csproj
+++ b/Littera/Littera.API.UnitTests/Littera.API.UnitTests.csproj
@@ -20,4 +20,15 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Littera.API\Littera.API.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Mocks\appsettings\appsettings.json" />
+    <Content Include="Mocks\appsettings\appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
